participant/styles/_uswds-theme-custom-styles.scss
/*
* * * * * ==============================
* * * * * ==============================
* * * * * ==============================
* * * * * ==============================
========================================
========================================
========================================
----------------------------------------
USWDS THEME CUSTOM STYLES
----------------------------------------
!! Copy this file to your project's
    sass root. Don't edit the version
    in node_modules.
----------------------------------------
Custom project SASS goes here.

i.e.
@include u-padding-right('05');
----------------------------------------
*/

@use "uswds-core" as *;

// Header:
// Set custom background and text colors.
.header {
  background-color: #162e51;
  color: #fff;
}

// Sticky footer:
// USWDS surprisingly doesn't support this with any of their utilities or components.
.container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.main {
  flex: 1;
}

// Custom classes
p {
  @include typeset('body');
}

.intro {
  @include u-font-size('sans', 8); // 20px
  @include u-line-height('sans', 4); // 30px
}

.label-large,
.legend-large {
  @include u-text('bold');
  @include u-font-size('sans', 9); // 22px
  @include u-line-height('sans', 2); // ~25px
}


// USWDS List:
// Override arbitrary max width
.usa-list li {
  max-width: 100%;
}

p + .usa-list {
  margin-top: -0.5em;
}

// USWDS Process List:
// Remove margin on last child
.usa-process-list__item:last-child {
  padding-bottom: 0;
}

// USWDS Hint + USWDS Memorable Date:
// Reduce space in between
.usa-hint + .usa-memorable-date {
  .usa-form-group {
    margin-top: units(0.5)
  }
}

// USWDS Card Group:
// Override accidental styling as indented list
.usa-card-group ul {
  list-style-type: disc;
}

// USWDS Card:
// Drop large first margin-top
.usa-card__header + .usa-card__body {
  .usa-fieldset:first-child .usa-legend {
    margin-top: 0;
  }
}

// USWDS Card:
// Tell USWDS to use the sans font family instead of default serif
.usa-card__heading {
  font-family: family('sans');
}

// USWDS Label:
// Remove form limit
.usa-label {
  max-width: 100%;
}

